styles/index.scss
.intro .about {
  margin-bottom: 5.5rem;

  .title {
    font-size: 50px;
    margin-bottom: 1em;
    font-weight: 900;
    // text-shadow: 0px 0px 20px rgba(54,54,54,0.44);
  }

  .subtitle {
    font-size: 1.5rem;
  }

  @media screen and (max-width: 768px) {
    margin-bottom: 3rem;
    margin-top: -2rem;

    .title {
      font-size: 30px;
      margin-bottom: 1.5em;
    }
  
    .subtitle {
      font-size: 1.5rem;
    }
  }
}

.container.is-colored {
  background-color: #d5d1f3;
  border-radius: 12px;
  z-index: -2;
}

.main.with-gradient {
  @media screen and (min-width: 769px) {
    padding-top: 0;
  }

  .rainbow {
    position: absolute;
    z-index: -1;
    width: 100%;
    height: 100%;
    border-radius: 12px;
    animation: fadein linear 2s, huerotate 5s ease-in-out infinite;
    animation-direction: alternate;
    @media screen and (max-width: 768px) {
      display: none;
    }
  }

  @keyframes fadein {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  @keyframes huerotate {
    from {
      filter: hue-rotate(-30deg);
    }
    to {
      filter: hue-rotate(30deg);
    }
  }
}

.gradient {
  border-radius: 12px;

  @media screen and (min-width: 769px) {
    padding: 60px 45px;
  }
}

.box.hover-shadow {
  transition: all 0.07s ease-in-out;

  &:hover {
    box-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.15), 0 0px 0 1px rgba($scheme-invert, 0.02)
  }
}

